# english

./: README.md  data.db  pyproject.toml
docs/: 2023-02-07-20-20.md
highlights/: 2023-02-06-15-10.yaml  2023-02-06-15-30.yaml
learning/: 2023-02-06-15-06.md  2023-02-06-15-08.md  2023-02-07-20-23.md  2023-02-07-20-26.md  2023-02-07-20-35.md  2023-02-07-21-05.md
src/: english.py  importing.py  organizer.py
tasks/: 2023-02-08-12-47.json
tests/: testCleaning.py
